# x11screencast-portal

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
client/: Cargo.toml
data/: org.freedesktop.impl.portal.desktop.picom.service.in  picom.portal  xdg-desktop-portal-picom.service
gl-bindings/: Cargo.toml  build.rs
gl-bindings/src/: lib.rs
plugin/: Cargo.toml  build.rs  picom.h
plugin/src/: cursor.rs  ffi.rs  lib.rs  pipewire.rs  server.rs
portal/: Cargo.toml  build.rs
portal/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
