[workspace]
members = ["portal", "gl-bindings", "plugin", "protocol"]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true

[workspace.dependencies]
anyhow = "1.0.0"
withfd = { version = "0.2.1", features = ["async-io"] }
xdg = "2.5.2"
futures-executor = { version = "0.3.30", features = ["thread-pool"] }
futures-util = "0.3.30"
async-io = "2.3.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
drm-fourcc = { version = "2.2.0", features = ["serde"] }
smallvec = { version = "1.13.0", features = ["serde"] }
x11rb = { version = "0.13.0", features = ["allow-unsafe-code", "xfixes"] }
pkg-config = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
