[package]
name = "picom-egl-screencast"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2.8"
drm = "0.12.0"
drm-fourcc.workspace = true
libc = "0.2.155"
anyhow = "1.0.0"
libffi = "3.2.0"
gbm = { version = "0.15.0", default-features = false, features = [
	"drm",
	"drm-support",
] }
x11rb.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
async-io.workspace = true
fs4 = "0.8.3"
async-channel = "2.3.1"
gl-bindings = { path = "../gl-bindings/" }
withfd.workspace = true
xdg.workspace = true
protocol = { path = "../protocol" }
smallvec.workspace = true
slotmap = "1.0.0"
pipewire = { version = "0.8.0", features = [ "v0_3_33", "v0_3_34" ] }
bitfield = "0.15.0"
tracing.workspace = true
tracing-subscriber.workspace = true
smol = "2.0.0"
bytemuck = "1.16.0"
oneshot = "0.1.7"
atomic = "0.6.0"
pin-project = "1.1.0"
random-string = "1.1.0"

[build-dependencies]
anyhow = "1.0.86"
bindgen = "0.69.4"
gl_generator = "0.14.0"
pkg-config = "0.3.30"
